UPDATE extras que ni idea que hacen

--- a/Estructura de datos y Algoritmos.vcxproj
+++ b/Estructura de datos y Algoritmos.vcxproj
@@ -128,9 +128,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Estructura de datos y Algoritmos.cpp" />
+    <ClCompile Include="mergeTest.cpp" />
+    <ClCompile Include="stackSort.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="merge-sort.h" />
+    <ClInclude Include="mergeTest.h" />
+    <ClInclude Include="stackSort.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
